Add Foreman 3.5.0-rc1 release notes

--- a/_includes/manuals/3.5/1.2_release_notes.md
+++ b/_includes/manuals/3.5/1.2_release_notes.md
@@ -44,10 +44,226 @@ It is safe to remove the file or remove all content.
 
 ### Release Notes
 
+### Release notes for 3.5.0
+#### Foreman - API
+* Add BIOS info to reported data facet ([#35696](https://projects.theforeman.org/issues/35696))
+* Update apipie-rails to 0.8.x ([#35447](https://projects.theforeman.org/issues/35447))
+* Calling the api/v2/operatingsystems#bootfiles endpoint fails with "unknown permission" ([#35055](https://projects.theforeman.org/issues/35055))
+
+#### Foreman - Audit Log
+* Update audited to version 5 ([#35422](https://projects.theforeman.org/issues/35422))
+
+#### Foreman - Authentication
+* Relax JWT pin to get newer versions of the gem ([#35663](https://projects.theforeman.org/issues/35663))
+* Kerberos authentication fails for POST, PUT and DELETE api calls ([#35473](https://projects.theforeman.org/issues/35473))
+
+#### Foreman - Compute resources - GCE
+* Remove GCE Compute resource code ([#35088](https://projects.theforeman.org/issues/35088))
+
+#### Foreman - Compute resources - VMware
+* hammer cannot use the cluster name or id as valid input when clusters are residing inside folders and fails with error fog not found ([#35438](https://projects.theforeman.org/issues/35438))
+
+#### Foreman - DB migrations
+* Remove i386 from seeded host architectures ([#35528](https://projects.theforeman.org/issues/35528))
+* After removing the foreman_docker plugin, foreman log is flooded with  huge tracebacks related to "unknown class DockerRegistry, ignoring" and "unknown class Container, ignoring" ([#35347](https://projects.theforeman.org/issues/35347))
+
+#### Foreman - Development tools
+* Describe dealing with pkgconfig error in foreman_dev_setup.asciidoc ([#35647](https://projects.theforeman.org/issues/35647))
+* Updating Contributions file with a few links & adding a link to it in ReadMe file ([#35587](https://projects.theforeman.org/issues/35587))
+* developer_docs/foreman_dev_setup adding a guide for Fedora users and edge error fix ([#35581](https://projects.theforeman.org/issues/35581))
+* Update as_deprecation_tracker to at least 1.6 for Ruby 3 ([#35430](https://projects.theforeman.org/issues/35430))
+* Add testing instructions to the Foreman development setup guide ([#35417](https://projects.theforeman.org/issues/35417))
+* Add a disabled option to the dropdown menu items on foreman ([#35416](https://projects.theforeman.org/issues/35416))
+* Document developer setup for Smart Proxy, REX & Ansible ([#35391](https://projects.theforeman.org/issues/35391))
+
+#### Foreman - E-Mail
+* Update roadie-rails to version 3 for Ruby 3 support ([#35448](https://projects.theforeman.org/issues/35448))
+
+#### Foreman - Facts
+* Ansible fact parser fails to parse Windows facts if they do not contain os_name ([#35658](https://projects.theforeman.org/issues/35658))
+* Add kernel_version to reported data facet for use in new host UI OS card ([#35619](https://projects.theforeman.org/issues/35619))
+* Missing icons for salt and chef as fact sources ([#35569](https://projects.theforeman.org/issues/35569))
+* While running concurrent registrations, foreman fails with 500 ISE on index_operatingsystems_on_title unique index violation ([#35485](https://projects.theforeman.org/issues/35485))
+
+#### Foreman - Host creation
+* Ubuntu Autoinstall template does not take host params into account ([#35397](https://projects.theforeman.org/issues/35397))
+* Bulk rebuild hosts can not reset the build token ([#35203](https://projects.theforeman.org/issues/35203))
+* Ubuntu Autoinstall default network identifier ([#35180](https://projects.theforeman.org/issues/35180))
+* Ubuntu Autoinstall does not support static IP deployment ([#35166](https://projects.theforeman.org/issues/35166))
+
+#### Foreman - Host registration
+* Malformed Debian repository ([#35650](https://projects.theforeman.org/issues/35650))
+* Use registration_url setting exposed by the Smart Proxy ([#35626](https://projects.theforeman.org/issues/35626))
+* Changing proxy causes an error ([#35490](https://projects.theforeman.org/issues/35490))
+
+#### Foreman - Internationalization
+* Malformed translation strings ([#35708](https://projects.theforeman.org/issues/35708))
+* Update rails-i18n to version 7 ([#35428](https://projects.theforeman.org/issues/35428))
+
+#### Foreman - Inventory
+* Add reported data profile for hosts index page ([#35623](https://projects.theforeman.org/issues/35623))
+* Add a link to the host group on the new host detail page ([#35497](https://projects.theforeman.org/issues/35497))
+* Create column selector on host index page ([#35287](https://projects.theforeman.org/issues/35287))
+* Use more accurate messaging when host statuses are cleared ([#35206](https://projects.theforeman.org/issues/35206))
+
+#### Foreman - JavaScript stack
+* Move CardExpansionContext to apply all host tabs ([#35702](https://projects.theforeman.org/issues/35702))
+* Fix current lint warnings ([#35558](https://projects.theforeman.org/issues/35558))
+* Add ouia-id to ConfirmModal ([#35439](https://projects.theforeman.org/issues/35439))
+* Remove deprecated slot 'details-cards' ([#34786](https://projects.theforeman.org/issues/34786))
+
+#### Foreman - Network
+* Boding interface bondig slaves are always changed to lower case ([#35377](https://projects.theforeman.org/issues/35377))
+
+#### Foreman - Organizations and Locations
+* Taxonomies are being set during extlogin too early, leading to user's default taxonomies being ignored ([#34949](https://projects.theforeman.org/issues/34949))
+
+#### Foreman - Packaging
+* Update rack-cors to 1.1.x ([#35450](https://projects.theforeman.org/issues/35450))
+* Update sshkey to version 2.x ([#35449](https://projects.theforeman.org/issues/35449))
+* Update oauth to version 1 ([#35429](https://projects.theforeman.org/issues/35429))
+* Ensure scoped_search is at least 4.1.10 ([#35427](https://projects.theforeman.org/issues/35427))
+* Pin will_paginate to at least 3.3.0 ([#35421](https://projects.theforeman.org/issues/35421))
+* Bump sidekiq to 6.3.x ([#35414](https://projects.theforeman.org/issues/35414))
+* Disable public_file_server in production ([#35403](https://projects.theforeman.org/issues/35403))
+* Allow additional entries in config.hosts ([#35376](https://projects.theforeman.org/issues/35376))
+* Update graphql gem to at least 1.12 ([#32685](https://projects.theforeman.org/issues/32685))
+* Unbundle websockify ([#29539](https://projects.theforeman.org/issues/29539))
+
+#### Foreman - Plugin integration
+* Remove empty webpack_assets.rb file ([#35419](https://projects.theforeman.org/issues/35419))
+
+#### Foreman - Proxy gateway
+* Make the Http Proxy store a CA certifcate ([#35359](https://projects.theforeman.org/issues/35359))
+
+#### Foreman - Rails
+* use caller_locations when emiting deprecation warnings ([#35717](https://projects.theforeman.org/issues/35717))
+* Update ancestry to version 4 ([#35423](https://projects.theforeman.org/issues/35423))
+* Drop boot_settings.rb early loading mechanism ([#35420](https://projects.theforeman.org/issues/35420))
+* Incorrect method signatures with keyword arguments ([#35300](https://projects.theforeman.org/issues/35300))
+
+#### Foreman - Rake tasks
+* \`foreman-rake permissions:reset\` should show a warning that it's required to manually update the password in 'foreman.yml' ([#31966](https://projects.theforeman.org/issues/31966))
+
+#### Foreman - Reporting
+* new report template to list all the installed packages ([#29590](https://projects.theforeman.org/issues/29590))
+
+#### Foreman - Settings
+* Power status should be a selectable column ([#35621](https://projects.theforeman.org/issues/35621))
+
+#### Foreman - Templates
+* Expose product version as a macro in templates ([#35694](https://projects.theforeman.org/issues/35694))
+* Allow delaying yggdrasild restart ([#35561](https://projects.theforeman.org/issues/35561))
+* REX pull deployment snippet is not included in kickstart default template ([#35547](https://projects.theforeman.org/issues/35547))
+* Template input_resource macro & preview error ([#35536](https://projects.theforeman.org/issues/35536))
+* save_to_file macro does not work if the thing being saved contains a heredoc terminated with EOF ([#35530](https://projects.theforeman.org/issues/35530))
+* Fix the iPXE default template description ([#35519](https://projects.theforeman.org/issues/35519))
+* 'snapshots:generate' doesn't work ([#35488](https://projects.theforeman.org/issues/35488))
+* Change puppetlabs_repo snippet to reference puppet-release files from repo root directory ([#35466](https://projects.theforeman.org/issues/35466))
+* New kexec template required in order to deploy Ubuntu 22 via discovery ([#35285](https://projects.theforeman.org/issues/35285))
+* AutoYaST PXELinux does not support networks without DHCP ([#35240](https://projects.theforeman.org/issues/35240))
+* Dual Stack Fallback mode for provisioning ([#35207](https://projects.theforeman.org/issues/35207))
+* Add option to use \`reboot --kexec\` to speed up provisioning ([#35194](https://projects.theforeman.org/issues/35194))
+* Add option to permit graphical installs for Red Hat ([#35177](https://projects.theforeman.org/issues/35177))
+* remove reference to legacy puppet brand identifier puppetlabs in provision templates ([#31593](https://projects.theforeman.org/issues/31593))
+
+#### Foreman - Trends
+* Remove Trends and Statistics data from all instances ([#32116](https://projects.theforeman.org/issues/32116))
+
+#### Foreman - Unattended installations
+* dhclient not available in minimal iso image for EL&gt;=8 ([#35583](https://projects.theforeman.org/issues/35583))
+* NetPlan templates broken when using Dual Stack environments ([#35578](https://projects.theforeman.org/issues/35578))
+* Raise an error if OS family is not set ([#35480](https://projects.theforeman.org/issues/35480))
+* RHEL 9 provisioned host goes into emergency mode after initial reboot ([#35331](https://projects.theforeman.org/issues/35331))
+* Add option to clone installation media ([#35152](https://projects.theforeman.org/issues/35152))
+* Add installation medium for Stream 9 ([#35151](https://projects.theforeman.org/issues/35151))
+* Permit setting puppet tag during install ([#35137](https://projects.theforeman.org/issues/35137))
+
+#### Foreman - Users, Roles and Permissions
+* Users who were disabled should be clearly marked in the user list ([#35131](https://projects.theforeman.org/issues/35131))
+
+#### Foreman - Web Interface
+* Host Details - Add a BIOS card ([#35667](https://projects.theforeman.org/issues/35667))
+* Host Details - Add a provisioning card ([#35665](https://projects.theforeman.org/issues/35665))
+* Host - Details tab - 'Networking interfaces' card ([#35656](https://projects.theforeman.org/issues/35656))
+* Display host name instead of host ID in delete host confirm modal in host overview ([#35636](https://projects.theforeman.org/issues/35636))
+* Searchbar disappears when trying to select a bookmark as user without bookmark permissions ([#35634](https://projects.theforeman.org/issues/35634))
+* Add kernel release to new host details operating system card ([#35622](https://projects.theforeman.org/issues/35622))
+* new host details - Details tab cards are all in one column on very tall screens ([#35605](https://projects.theforeman.org/issues/35605))
+* Host details statuses clear button is always disabled ([#35491](https://projects.theforeman.org/issues/35491))
+* add masonryLayout to os card in host details ([#35475](https://projects.theforeman.org/issues/35475))
+* Add ouiaId for the host details pages ([#35436](https://projects.theforeman.org/issues/35436))
+* host details audits, change from list to table ([#35424](https://projects.theforeman.org/issues/35424))
+* Host details templates card ([#35387](https://projects.theforeman.org/issues/35387))
+* Make columns on host index page selectable ([#35361](https://projects.theforeman.org/issues/35361))
+* Host details Operating system card ([#35345](https://projects.theforeman.org/issues/35345))
+* Host UI - box & cursor pointer ([#35319](https://projects.theforeman.org/issues/35319))
+* New host detail - OS label as a link to OS detail ([#35305](https://projects.theforeman.org/issues/35305))
+* Details tab - Switch to masonry card layout instead of square grid ([#35294](https://projects.theforeman.org/issues/35294))
+* Hosts "New UI" no way to review templates ([#35176](https://projects.theforeman.org/issues/35176))
+* Fix details tab cards Expand/collapse all behavior ([#34997](https://projects.theforeman.org/issues/34997))
+* refactor filters page  ([#34764](https://projects.theforeman.org/issues/34764))
+* New/Edit Subnet form help text for Range field ([#25507](https://projects.theforeman.org/issues/25507))
+
+#### Installer
+* Add support to set registration_url ([#35680](https://projects.theforeman.org/issues/35680))
+* Add ForemanGoogle plugin ([#35677](https://projects.theforeman.org/issues/35677))
+* Default Apache to use system ciphers via PROFILE=system ([#35629](https://projects.theforeman.org/issues/35629))
+* Use Redis 6 ([#35564](https://projects.theforeman.org/issues/35564))
+* Add default pulp_deb config during installer runs ([#35496](https://projects.theforeman.org/issues/35496))
+* Restart yggdrasil from /usr/bin/katello-rhsm-consumer ([#35486](https://projects.theforeman.org/issues/35486))
+
+#### Installer - External modules
+* SSO feature settings are not getting enabled and fails with HTTPD CONF issue ([#35524](https://projects.theforeman.org/issues/35524))
+* Salt master configuration file has wrong file permission ([#35396](https://projects.theforeman.org/issues/35396))
+
+#### Installer - Foreman modules
+* Provide a parameter to set Candlepin log level ([#35699](https://projects.theforeman.org/issues/35699))
+* allow setting GssapiLocalName Off ([#35685](https://projects.theforeman.org/issues/35685))
+* Filter "Applied catalog in x.y seconds" messages out of Puppet report ([#35684](https://projects.theforeman.org/issues/35684))
+* Add stronger ciphers to Candlepin's config ([#35638](https://projects.theforeman.org/issues/35638))
+* Configure Pulpcore's TELEMETRY feature ([#35607](https://projects.theforeman.org/issues/35607))
+* Support ensuring the OpenSCAP Puppet module in the foreman_proxy module ([#35531](https://projects.theforeman.org/issues/35531))
+* Make installer generate an environment file for ansible instead of ansible.cfg ([#35455](https://projects.theforeman.org/issues/35455))
+* Compatibility with apache mod_status ([#35356](https://projects.theforeman.org/issues/35356))
+* Drop xinetd support ([#35353](https://projects.theforeman.org/issues/35353))
+* serve assets directly via Apache, not via Puma/Rails ([#33956](https://projects.theforeman.org/issues/33956))
+
+#### Installer - foreman-installer script
+* Enable HTTP/2 in Apache configs ([#35631](https://projects.theforeman.org/issues/35631))
+* Remove the trailing "\" from capsule-certs-generate command for new capsules in katello-certs-check ([#35453](https://projects.theforeman.org/issues/35453))
+
+#### Packaging - RPMs
+* Obsolete foreman_docker ([#35538](https://projects.theforeman.org/issues/35538))
+* make sprockets-based plugin assets reachable from within /var/lib/foreman/public/assets ([#35409](https://projects.theforeman.org/issues/35409))
+* dnf can't load foreman-protector.py as a regular user ([#35366](https://projects.theforeman.org/issues/35366))
+
+#### SELinux
+* Foreman can't log to journald/syslog ([#35695](https://projects.theforeman.org/issues/35695))
+* Allow apache to read /var/lib/foreman/public ([#35402](https://projects.theforeman.org/issues/35402))
+* Access to /etc/resolv.conf is denied when using systemd-resolved ([#34807](https://projects.theforeman.org/issues/34807))
+
+#### Smart Proxy
+* registration_url setting for Registration module ([#35639](https://projects.theforeman.org/issues/35639))
+* Drop deprecated methods ([#33881](https://projects.theforeman.org/issues/33881))
+* Drop daemonize support ([#31118](https://projects.theforeman.org/issues/31118))
+
+#### Smart Proxy - Packaging
+* Explicitly depend on webrick for Ruby 3 support ([#35510](https://projects.theforeman.org/issues/35510))
+* Declare compatible versions of Sinatra  ([#35507](https://projects.theforeman.org/issues/35507))
+
+#### Smart Proxy - Plugins
+* Verify boolean settings in modules ([#35468](https://projects.theforeman.org/issues/35468))
+
+#### Smart Proxy - Registration
+* Use rackup_path helper in registration ([#35467](https://projects.theforeman.org/issues/35467))
+
+*A full list of changes in 3.5.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1624)*
+
 ### Contributors
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-<!-- update scripts/committers.rb with the correct versions and dates and fill this in -->
+Adam Ruzicka, Amit Upadhye, Andrew Teixeira, Anthony Somerset, Antoine Beaupré, Bastian Schmidt, Bernhard Suttner, Chris Roberts, Dirk Götz, Dyrkon, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Gordon Bleux, Ian Ballou, Jeremy Lenz, John Mitsch, Jonas Trüstedt, Jonathon Turel, Justin Sherrill, Karolina Malyjurkova, Leos Stejskal, Lior Keren, Lucy Fu, Lukáš Zapletal, Marcel Kühlhorn, Marek Hulán, Maria Agaphontzev, Matt Darcy, Matěj Mudra, Melanie Corr, Nofar Alfassi, Oleh Fedorenko, Ondřej Ezr, Ondřej Pražák, Partha Aji, Pat Riehecky, Patrick Creech, Pavel Moravec, Peter Koprda, Rahul Bajaj, Romuald Conty, Ron Lavi, Sayan Das, Shim Shtein, Shimon Shtein, Shira Maximov, Tim Meusel, Tomer Brisker, William Clark, Yifat Makias, Štefan Németh
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
