Correct the contributors for Foreman 3.5
Previously I didn't update the from and to date which meant it was using
the wrong interval.

--- a/_includes/manuals/3.5/1.2_release_notes.md
+++ b/_includes/manuals/3.5/1.2_release_notes.md
@@ -264,6 +264,6 @@ It is safe to remove the file or remove all content.
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-Adam Ruzicka, Amit Upadhye, Andrew Teixeira, Anthony Somerset, Antoine Beaupré, Bastian Schmidt, Bernhard Suttner, Chris Roberts, Dirk Götz, Dyrkon, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Gordon Bleux, Ian Ballou, Jeremy Lenz, John Mitsch, Jonas Trüstedt, Jonathon Turel, Justin Sherrill, Karolina Malyjurkova, Leos Stejskal, Lior Keren, Lucy Fu, Lukáš Zapletal, Marcel Kühlhorn, Marek Hulán, Maria Agaphontzev, Matt Darcy, Matěj Mudra, Melanie Corr, Nofar Alfassi, Oleh Fedorenko, Ondřej Ezr, Ondřej Pražák, Partha Aji, Pat Riehecky, Patrick Creech, Pavel Moravec, Peter Koprda, Rahul Bajaj, Romuald Conty, Ron Lavi, Sayan Das, Shim Shtein, Shimon Shtein, Shira Maximov, Tim Meusel, Tomer Brisker, William Clark, Yifat Makias, Štefan Németh
+Adam Ruzicka, Amit Upadhye, Anthony Somerset, Bastian Schmidt, Bernhard Suttner, Chris Roberts, Dirk Götz, Dirk Heinrichs, Dyrkon, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Frank Adaemmer, Ian Ballou, Jeremy Lenz, Jonas Trüstedt, Kamil Szubrycht, Karolina Malyjurkova, Leos Stejskal, Lior Keren, Lucy Fu, Lukáš Zapletal, Manuel Laug, Marcel Kühlhorn, Marek Hulán, Maria Agaphontzev, Matt Darcy, Matěj Mudra, Nofar Alfassi, Oleh Fedorenko, Partha Aji, Pat Riehecky, Pavel Moravec, Peter Koprda, Ron Lavi, Sayan Das, Shim Shtein, benjamin-robertson, kobybr, timdeluxe, Štefan Németh
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
