Deprecate Chef plug-in for Foreman 3.5+

--- a/_includes/manuals/3.5/1.1_architecture.md
+++ b/_includes/manuals/3.5/1.1_architecture.md
@@ -8,7 +8,7 @@ Foreman installation supports unattended installations, then other
 operations need to be performed to fully automate this process. The
 Smart Proxy manages remote services and is generally installed with all
 Foreman installations to manage TFTP, DHCP, DNS, Puppet, Puppet CA,
-Ansible, Salt, and Chef.
+Ansible, and Salt.
 
 ## Smart-Proxy
 
