--- a/_includes/manuals/nightly/3.5.2_configuration_options.md
+++ b/_includes/manuals/nightly/3.5.2_configuration_options.md
@@ -326,7 +326,7 @@ See also: dns_conflict_timeout
 
 ##### restrict_registered_smart_proxies
 
-When set to _true_, services such as Puppet servers (or Salt, Chef) need to have a smart proxy registered with the appropriate feature (e.g. Puppet) to access fact/report importers and ENC output.
+When set to _true_, services such as Puppet servers (or Salt) need to have a smart proxy registered with the appropriate feature (e.g. Puppet) to access fact/report importers and ENC output.
 Default: true
 
 ##### root_pass
