--- a/_includes/manuals/nightly/4.2.5_matchers.md
+++ b/_includes/manuals/nightly/4.2.5_matchers.md
@@ -121,7 +121,7 @@ By entering a list (comma-separated, no spaces) or a regex (no delimiter require
 
 #### Template variables
 
-Because Foreman offers templating capabilities, you can utilise pre-existing variables, macros and or functions within your parameterized classes. This is especially useful if you need to send a string to Puppet/Chef, but have a need to embed host specific information within the string, such as the host's FQDN.
+Because Foreman offers templating capabilities, you can utilise pre-existing variables, macros and or functions within your parameterized classes. This is especially useful if you need to send a string to Puppet, but have a need to embed host specific information within the string, such as the host's FQDN.
 
 Let's look a quick example situation: we need to configure RabbitMQ and have it use our existing Puppet SSL certs. Using what we've learnt above, we jump into the RabbitMQ class and configure the "ssl cert" parameter as such:
 
