Add Foreman 3.4.1 release notes

--- a/_includes/manuals/3.4/1.2_release_notes.md
+++ b/_includes/manuals/3.4/1.2_release_notes.md
@@ -25,6 +25,31 @@ Therefore running Foreman on Ruby 2.5 is dropped in Foreman 3.4. Please switch t
 
 ### Deprecations
 
+### Release notes for 3.4.1
+#### Foreman - Compute resources - VMware
+* hammer cannot use the cluster name or id as valid input when clusters are residing inside folders and fails with error fog not found ([#35438](https://projects.theforeman.org/issues/35438))
+
+#### Foreman - Organizations and Locations
+* Taxonomies are being set during extlogin too early, leading to user's default taxonomies being ignored ([#34949](https://projects.theforeman.org/issues/34949))
+
+#### Foreman - Unattended installations
+* Change puppetlabs_repo snippet to reference puppet-release files from repo root directory ([#35466](https://projects.theforeman.org/issues/35466))
+* RHEL 9 provisioned host goes into emergency mode after initial reboot ([#35331](https://projects.theforeman.org/issues/35331))
+
+#### Installer - External modules
+* SSO feature settings are not getting enabled and fails with HTTPD CONF issue ([#35524](https://projects.theforeman.org/issues/35524))
+
+#### Installer - foreman-installer script
+* Set ansible-runner repository management to false for Debian ([#35553](https://projects.theforeman.org/issues/35553))
+
+#### Packaging - RPMs
+* katello-change-hostname uses removed --disable-system-checks ([#35756](https://projects.theforeman.org/issues/35756))
+
+#### Smart Proxy - Packaging
+* Declare compatible versions of Sinatra  ([#35507](https://projects.theforeman.org/issues/35507))
+
+*A full list of changes in 3.4.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1625)*
+
 ### Release notes for 3.4.0
 #### Foreman
 * Deprecated use of ERB.new with positional arguments ([#35298](https://projects.theforeman.org/issues/35298))
