Mention Enterprise Linux support
Rather than mentioning explicit distros, this aligns on Enterprise Linux
for the collection of RHEL and its derivatives. It mentions versions on
which it's tested in our pipelines.

--- a/_includes/manuals/3.5/2.1_quickstart_installation.md
+++ b/_includes/manuals/3.5/2.1_quickstart_installation.md
@@ -24,10 +24,8 @@ function update_quickstart_os(select) {
 To provide specific installation instructions, please select your operating system:
 <select onChange="update_quickstart_os(this);">
   <option value="none">-- select operating system --</option>
-  <option value="el8">CentOS 8</option>
-  <option value="el8">CentOS 8 Stream</option>
+  <option value="el8">Enterprise Linux 8</option>
   <option value="debian11">Debian 11 (Bullseye)</option>
-  <option value="rhel8">Red Hat Enterprise Linux 8</option>
   <option value="ubuntu2004">Ubuntu 20.04 (Focal)</option>
 </select>
 
@@ -37,7 +35,7 @@ To provide specific installation instructions, please select your operating syst
   <i>No operating system selected.</i>
 </div>
 
-<div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
+<div class="quickstart_os quickstart_os_el8">
   <p>
     Enable Puppet's 7.x repository:
   </p>
@@ -47,7 +45,7 @@ sudo dnf -y install https://yum.puppet.com/puppet7-release-el-8.noarch.rpm
 {% endhighlight %}
 </div>
 
-<div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
+<div class="quickstart_os quickstart_os_el8">
   <p>Enable the Foreman repositories:</p>
 
 {% highlight bash %}
@@ -55,7 +53,7 @@ sudo dnf -y install https://yum.theforeman.org/releases/{{page.version}}/el8/x86
 {% endhighlight %}
 </div>
 
-<div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
+<div class="quickstart_os quickstart_os_el8">
   <p>Enable the Foreman module:</p>
 
 {% highlight bash %}
@@ -109,7 +107,7 @@ echo "deb http://deb.theforeman.org/ plugins {{page.version}}" | sudo tee -a /et
   <i>No operating system selected.</i>
 </div>
 
-<div class="quickstart_os quickstart_os_rhel8 quickstart_os_el8">
+<div class="quickstart_os quickstart_os_el8">
 {% highlight bash %}
 sudo dnf -y install foreman-installer
 {% endhighlight %}
@@ -129,7 +127,7 @@ sudo apt-get update && sudo apt-get -y install foreman-installer
 
 The installation run is non-interactive, but the configuration can be customized by supplying any of the options listed in `foreman-installer --help`, or by running `foreman-installer -i` for interactive mode.  More examples are given in the [Installation Options](/manuals/{{page.version}}/index.html#3.2.2InstallerOptions) section.  Adding `-v` will disable the progress bar and display all changes.  To run the installer, execute:
 
-<div class="quickstart_os quickstart_os_none quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_el8 quickstart_os_rhel8">
+<div class="quickstart_os quickstart_os_none quickstart_os_debian11 quickstart_os_ubuntu2004 quickstart_os_el8">
 {% highlight bash %}
 sudo foreman-installer
 {% endhighlight %}
