--- a/_includes/manuals/3.5/3.1.1_supported_platforms.md
+++ b/_includes/manuals/3.5/3.1.1_supported_platforms.md
@@ -3,8 +3,6 @@ The following operating systems are supported by the installer, have packages an
 * Red Hat Enterprise Linux 8
   * Architectures: x86_64 only
   * Apply all SELinux-related errata.
-* CentOS 8
-  * Architectures: x86_64 only
 * CentOS 8 Stream
   * Architectures: x86_64 only
   * **Note:**
@@ -25,7 +23,7 @@ Other operating systems will need to use alternative installation methods, such 
 
 The following operating systems are known to install successfully from Foreman:
 
-* RHEL and derivatives (CentOS, Scientific Linux, Oracle Linux) 3+
+* Enterprise Linux (RHEL, AlmaLinux, CentOS, Oracle Linux, Rocky Linux)
 * Fedora
 * Ubuntu
 * Debian
