--- a/_includes/manuals/3.5/1.2_release_notes.md
+++ b/_includes/manuals/3.5/1.2_release_notes.md
@@ -50,12 +50,40 @@ It is safe to remove the file or remove all content.
   It has been removed from the Installer and Packaging.
 * Google compute resource has been extracted to the [Foreman Google plugin](https://github.com/theforeman/foreman_google).
   The installer will automatically migrate to the plugin if needed.
+* Puppet reports [skip "Applied catalog in x.y second logs" messages](https://projects.theforeman.org/issues/35684).
+  Uneventful Puppet runs are now completely empty, which reduces database storage requirements.
+  This exposed a bug where [Foreman is unable to determine the origin](https://projects.theforeman.org/issues/35833).
+  Because of this, uneventful Puppet reports do not have an origin.
+* External node classifier [renames hostname and fqdn parameters](https://projects.theforeman.org/issues/35326).
+  In Foreman 2.4 [the hostname and fqdn parameters were added](https://projects.theforeman.org/issues/31168), but this overrides with the facts in Puppet.
+  The parameters are now prefixed by `foreman_`.
+* Trends and statistics [will be removed](https://projects.theforeman.org/issues/35347) unless [foreman_statistics](https://github.com/theforeman/foreman_statistics) is installed.
+  This data used to be part of Foreman, but was extracted to a plugin in Foreman 2.3.
+  Until now this data was kept in the database, but now this data will be purged unless the plugin is installed.
 
-### Deprecations
+### Release notes for 3.5.1
+#### Foreman - DB migrations
+* Statistics migrations are purged even if foreman_statistics is present ([#35871](https://projects.theforeman.org/issues/35871))
+
+#### Foreman - Facts
+* Support new Debian unstable OS facts ([#35865](https://projects.theforeman.org/issues/35865))
+
+#### Foreman - Host creation
+* Ubuntu Autoinstall enable offline and online installation ([#35719](https://projects.theforeman.org/issues/35719))
+
+#### Foreman - Unattended installations
+* Provisioning registered RHEL hosts is impossible without Katello installed ([#35868](https://projects.theforeman.org/issues/35868))
+
+#### Foreman - Web Interface
+* host details - Details tab cards have horizontal scroll ([#35819](https://projects.theforeman.org/issues/35819))
+
+*A full list of changes in 3.5.1 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1668)*
 
 ### Release notes for 3.5.0
 #### Foreman - API
+* Internal Server Error when creating a CV with org_id specified as array ([#35816](https://projects.theforeman.org/issues/35816))
 * User is able to create table preference without columns ([#35673](https://projects.theforeman.org/issues/35673))
+* Fixes API documentation typo ([#35648](https://projects.theforeman.org/issues/35648))
 * Calling the api/v2/operatingsystems#bootfiles endpoint fails with "unknown permission" ([#35055](https://projects.theforeman.org/issues/35055))
 
 #### Foreman - Authentication
@@ -81,6 +109,9 @@ It is safe to remove the file or remove all content.
 * Add a disabled option to the dropdown menu items on foreman ([#35416](https://projects.theforeman.org/issues/35416))
 * Document developer setup for Smart Proxy, REX & Ansible ([#35391](https://projects.theforeman.org/issues/35391))
 
+#### Foreman - External Nodes
+* Foreman Puppet ENC "hostname" and "fqdn" conflict with core Puppet Facts ([#35326](https://projects.theforeman.org/issues/35326))
+
 #### Foreman - Facts
 * Add BIOS info to reported data facet ([#35696](https://projects.theforeman.org/issues/35696))
 * Ansible fact parser fails to parse Windows facts if they do not contain os_name ([#35658](https://projects.theforeman.org/issues/35658))
@@ -97,9 +128,12 @@ It is safe to remove the file or remove all content.
 * Changing proxy causes an error ([#35490](https://projects.theforeman.org/issues/35490))
 
 #### Foreman - Internationalization
+* React-intl components are not translated ([#35744](https://projects.theforeman.org/issues/35744))
 * Malformed translation strings ([#35708](https://projects.theforeman.org/issues/35708))
 
 #### Foreman - Inventory
+* BIOS UUID on host detail page is incorrect ([#35836](https://projects.theforeman.org/issues/35836))
+* Status of same columns in different categories should affect each other ([#35757](https://projects.theforeman.org/issues/35757))
 * Add Virtual guests to System properties card ([#35745](https://projects.theforeman.org/issues/35745))
 * Add network category to selectable columns ([#35733](https://projects.theforeman.org/issues/35733))
 * Incorrect page title on host statuses page ([#35724](https://projects.theforeman.org/issues/35724))
@@ -178,11 +212,13 @@ It is safe to remove the file or remove all content.
 * Power status should be a selectable column ([#35621](https://projects.theforeman.org/issues/35621))
 
 #### Foreman - Templates
+* Ubuntu TTY is unresponsive after deployment on some compute providers ([#35796](https://projects.theforeman.org/issues/35796))
 * Expose product version as a macro in templates ([#35694](https://projects.theforeman.org/issues/35694))
 * Template input_resource macro & preview error ([#35536](https://projects.theforeman.org/issues/35536))
 * save_to_file macro does not work if the thing being saved contains a heredoc terminated with EOF ([#35530](https://projects.theforeman.org/issues/35530))
 
 #### Foreman - Unattended installations
+* custom pre/post snippet hooks ([#35674](https://projects.theforeman.org/issues/35674))
 * dhclient not available in minimal iso image for EL&gt;=8 ([#35583](https://projects.theforeman.org/issues/35583))
 * NetPlan templates broken when using Dual Stack environments ([#35578](https://projects.theforeman.org/issues/35578))
 * Allow delaying yggdrasild restart ([#35561](https://projects.theforeman.org/issues/35561))
@@ -216,6 +252,7 @@ It is safe to remove the file or remove all content.
 * New/Edit Subnet form help text for Range field ([#25507](https://projects.theforeman.org/issues/25507))
 
 #### Installer
+* Add foreman_kernel_care support to the installer ([#35800](https://projects.theforeman.org/issues/35800))
 * Add ForemanGoogle plugin ([#35677](https://projects.theforeman.org/issues/35677))
 * Drop xinetd support ([#35353](https://projects.theforeman.org/issues/35353))
 
@@ -223,9 +260,11 @@ It is safe to remove the file or remove all content.
 * SSO feature settings are not getting enabled and fails with HTTPD CONF issue ([#35524](https://projects.theforeman.org/issues/35524))
 
 #### Installer - Foreman modules
+* smart_proxy_ansible needs smart_proxy_rex, but installer doesn't set it up automatically ([#35809](https://projects.theforeman.org/issues/35809))
 * Provide a parameter to set Candlepin log level ([#35699](https://projects.theforeman.org/issues/35699))
 * allow setting GssapiLocalName Off ([#35685](https://projects.theforeman.org/issues/35685))
 * Filter "Applied catalog in x.y seconds" messages out of Puppet report ([#35684](https://projects.theforeman.org/issues/35684))
+* Add support to customize rhsm API URL and pulpcore content URL ([#35681](https://projects.theforeman.org/issues/35681))
 * Add support to set registration_url ([#35680](https://projects.theforeman.org/issues/35680))
 * Add stronger ciphers to Candlepin's config ([#35638](https://projects.theforeman.org/issues/35638))
 * Configure Pulpcore's TELEMETRY feature ([#35607](https://projects.theforeman.org/issues/35607))
@@ -244,6 +283,7 @@ It is safe to remove the file or remove all content.
 * Remove the trailing "\" from capsule-certs-generate command for new capsules in katello-certs-check ([#35453](https://projects.theforeman.org/issues/35453))
 
 #### Packaging - RPMs
+* foreman-proxy logrotate sends signal to all processes under foreman-proxy.service ([#35859](https://projects.theforeman.org/issues/35859))
 * katello-change-hostname uses removed --disable-system-checks ([#35756](https://projects.theforeman.org/issues/35756))
 * Obsolete foreman_docker ([#35538](https://projects.theforeman.org/issues/35538))
 * make sprockets-based plugin assets reachable from within /var/lib/foreman/public/assets ([#35409](https://projects.theforeman.org/issues/35409))
@@ -275,6 +315,6 @@ It is safe to remove the file or remove all content.
 
 We'd like to thank the following people who contributed to the Foreman {{page.version}} release:
 
-Adam Ruzicka, Amit Upadhye, Anthony Somerset, Bastian Schmidt, Bernhard Suttner, Chris Roberts, Dirk Götz, Dirk Heinrichs, Dyrkon, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Frank Adaemmer, Ian Ballou, Jeremy Lenz, Jonas Trüstedt, Kamil Szubrycht, Karolina Malyjurkova, Leos Stejskal, Lior Keren, Lucy Fu, Lukáš Zapletal, Manuel Laug, Marcel Kühlhorn, Marek Hulán, Maria Agaphontzev, Matt Darcy, Matěj Mudra, Nofar Alfassi, Oleh Fedorenko, Partha Aji, Pat Riehecky, Pavel Moravec, Peter Koprda, Ron Lavi, Sayan Das, Shim Shtein, benjamin-robertson, kobybr, timdeluxe, Štefan Németh
+Adam Ruzicka, Alex Fisher, Alexander Olofsson, Amit Upadhye, Anthony Somerset, Bastian Schmidt, Bernhard Suttner, Chris Roberts, Christian Ruppert, Dirk Götz, Dirk Heinrichs, Dyrkon, Elkin Aguas, Eric D. Helms, Evgeni Golov, Ewoud Kohl van Wijngaarden, Frank Adaemmer, Ian Ballou, Jeremy Lenz, Jonas Trüstedt, Kamil Szubrycht, Karolina Malyjurkova, Leos Stejskal, Lior Keren, Lucy Fu, Lukáš Zapletal, Manuel Laug, Marcel Kühlhorn, Marek Hulán, Maria Agaphontzev, Matt Darcy, Matěj Mudra, Maximilian Kolb, Nofar Alfassi, Oleh Fedorenko, Ondrej Ezr, Partha Aji, Pat Riehecky, Paul Donohue, Pavel Moravec, Peter Koprda, Quirin Pamp, Ron Lavi, Samir Jha, Sayan Das, Shim Shtein, William Clark, benjamin-robertson, kobybr, timdeluxe, Štefan Németh
 
 As well as all users who helped test releases, report bugs and provide feedback on the project.
