Update installer options to match nightly

--- a/_includes/manuals/nightly/3.2.2_installer_options.md
+++ b/_includes/manuals/nightly/3.2.2_installer_options.md
@@ -532,6 +532,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>Enable configuration for external authentication via IPA</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--foreman-ipa-authentication-api</td>
+        <td>Enable configuration for external authentication via IPA for API</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--foreman-ipa-manage-sssd</td>
         <td>If ipa_authentication is true, should the installer manage SSSD? You can disable it if you use another module for SSSD configuration</td>
       </tr>
@@ -1280,6 +1284,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>A hash of additional agent settings. Example: {stringify_facts => true}</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--puppet-agent-default-schedules</td>
+        <td>A boolean to enable/disable the default schedules</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--puppet-agent-noop</td>
         <td>Run the agent in noop mode.</td>
       </tr>
@@ -1388,6 +1396,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
         <td>The time an agent waits for one block to be read from an HTTP connection. If nothing is read after the elapsed interval then the connection will be closed.</td>
       </tr>
       <tr>
+        <td style='white-space:nowrap'>--puppet-localconfig</td>
+        <td>The localconfig setting.</td>
+      </tr>
+      <tr>
         <td style='white-space:nowrap'>--puppet-logdir</td>
         <td>Override the log directory.</td>
       </tr>
@@ -1430,6 +1442,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--puppet-prerun-command</td>
         <td>A command which gets excuted before each Puppet run</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--puppet-puppetconf-mode</td>
+        <td>The permissions for /etc/puppetlabs/puppet/puppet.conf default to '0644' and '0674' on windows</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-puppetmaster</td>
@@ -1582,6 +1598,10 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--puppet-server-environments-owner</td>
         <td>The owner of the environments directory</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--puppet-server-environments-recurse</td>
+        <td>Should the environments directory be managed recursively</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-envs-dir</td>
@@ -1809,7 +1829,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-telemetry</td>
-        <td>Enable Dropsonde telemetry. Defaults to true, matching defaults in Puppetserver 7. If set to false, will disable module metrics submission via Dropsonde. Note that is only valid since Puppetserver 7.</td>
+        <td>Enable Dropsonde telemetry. Undef means disabled while booleans are explicit opt-in or opt-out. This is different from Puppetserver's default values. Only valid since Puppetserver 7.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-puppetserver-trusted-agents</td>
@@ -1865,7 +1885,7 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-ssl-protocols</td>
-        <td>Array of SSL protocols to use. Defaults to [ 'TLSv1.2' ]</td>
+        <td>Array of SSL protocols to use. Defaults to [ 'TLSv1.3', 'TLSv1.2' ]</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--puppet-server-ssl-selector-threads</td>
@@ -2362,6 +2382,18 @@ kafo-export-params -c /etc/foreman-installer/scenarios.d/foreman.yaml -f html
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-script-mode</td>
         <td>Operation Mode of the plugin.</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-script-mqtt-rate-limit</td>
+        <td>Number of jobs that are allowed to run at the same time</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-script-mqtt-resend-interval</td>
+        <td>Time interval in seconds at which the notification should be re-sent to the host until the job is picked up or canceleld</td>
+      </tr>
+      <tr>
+        <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-script-mqtt-ttl</td>
+        <td>Time interval in seconds given to the host to pick up the job before considering the job undelivered.</td>
       </tr>
       <tr>
         <td style='white-space:nowrap'>--foreman-proxy-plugin-remote-execution-script-remote-working-dir</td>
