Add Foreman 3.6 headline features

--- a/_includes/manuals/3.6/1.2_release_notes.md
+++ b/_includes/manuals/3.6/1.2_release_notes.md
@@ -4,11 +4,176 @@ This section will be updated prior to the next release.
 
 ### Headline features
 
+#### Redis cache can now be managed by the installer
+
+By default Foreman uses a file-based cache on tmpfs, but Foreman 2.1 added
+support for Redis caching. Rails mentions that the file-based cache should not
+be used in production. There are known issues with (very) large installations
+with loads of concurrent requests.
+
+Now switching over is as easy as `foreman-installer --foreman-rails-cache-store type:redis`.
+This will likely become the default in a future version.
+
+#### New installations will disable Puppetserver's telemetry by default
+
+The Foreman project has always taken a position where we want to respect user's
+privacy and telemetry goes against that. Puppetserver 7 has started to send
+telemetry by default.
+
+Foreman 3.4 introduced an installer parameter to disable it
+(`--puppet-server-puppetserver-telemetry false`), but it kept the Puppetserver built in default.
+
+The Foreman installer will now default to disabling telemetry for new
+installations. Upgrading users will need to explicitly disable telemetry.
+
+For more information, see
+[Puppetserver's telementry documentation](https://www.puppet.com/docs/puppet/7/server/puppet_server_usage_telemetry.html).
+
 ### Upgrade warnings
 
 ### Deprecations
 
 ### Release Notes
+
+### Release notes for 3.6.0
+#### Foreman - API
+* Parameter 'search' on fact_value API endpoint results in internal server error ([#35990](https://projects.theforeman.org/issues/35990))
+* Unnecessary API calls for power column ([#35908](https://projects.theforeman.org/issues/35908))
+
+#### Foreman - Audit Log
+* Compatibility with audited 5.1.0  ([#35893](https://projects.theforeman.org/issues/35893))
+
+#### Foreman - Compute resources
+* Console button is shown, even if Compute Resource doesn't support consoles ([#32521](https://projects.theforeman.org/issues/32521))
+
+#### Foreman - Compute resources - VMware
+* Update fog-vsphere version to use rbvmomi2 ([#35862](https://projects.theforeman.org/issues/35862))
+
+#### Foreman - Compute resources - libvirt
+* nic network/bridge comparison can be nil ([#35797](https://projects.theforeman.org/issues/35797))
+
+#### Foreman - DB migrations
+* Statistics migrations are purged even if foreman_statistics is present ([#35871](https://projects.theforeman.org/issues/35871))
+
+#### Foreman - Dashboard
+* Take possibilty of report origin related settings not being there ([#36107](https://projects.theforeman.org/issues/36107))
+
+#### Foreman - Development tools
+* Environment variable FOREMAN_RAILS_CACHE_STORE_URLS is not set correctly in docker-compose file ([#35902](https://projects.theforeman.org/issues/35902))
+* Wrong syntax used in docker-compose.yml for specifying queues ([#35898](https://projects.theforeman.org/issues/35898))
+* Change container image to CentOS 8 Stream ([#35593](https://projects.theforeman.org/issues/35593))
+
+#### Foreman - Facts
+* Support new Debian unstable OS facts ([#35865](https://projects.theforeman.org/issues/35865))
+
+#### Foreman - Host registration
+* Registration - Unregister host before CA change ([#36071](https://projects.theforeman.org/issues/36071))
+
+#### Foreman - Internationalization
+* i18n automation failing due to internationalization of locators ([#35630](https://projects.theforeman.org/issues/35630))
+
+#### Foreman - Inventory
+* Host Details page doesn't have static UUIDs for the tabs and generate new UUID every time on page load ([#36000](https://projects.theforeman.org/issues/36000))
+* Host list interpretes HTML from comment-field ([#35977](https://projects.theforeman.org/issues/35977))
+* Windows password-encryption code changes input-value ([#35946](https://projects.theforeman.org/issues/35946))
+* Searching hosts should be possible by all reported data ([#35845](https://projects.theforeman.org/issues/35845))
+* Column selector displays on the empty host index page ([#35837](https://projects.theforeman.org/issues/35837))
+* Boot time column should show up as empty when there's no data ([#35823](https://projects.theforeman.org/issues/35823))
+* Some selectable columns on host list should have shorter headers ([#35820](https://projects.theforeman.org/issues/35820))
+* host details - Details tab cards have horizontal scroll ([#35819](https://projects.theforeman.org/issues/35819))
+* Move fields between categories on the host detail page ([#35786](https://projects.theforeman.org/issues/35786))
+* Add bios fields to reported data on host index page ([#35785](https://projects.theforeman.org/issues/35785))
+* Add 'Last configuration report' to 'Recent communication' card ([#35764](https://projects.theforeman.org/issues/35764))
+* No host found error after editing host's address ([#35762](https://projects.theforeman.org/issues/35762))
+* Export button does not use selectable columns ([#35701](https://projects.theforeman.org/issues/35701))
+* Details tab - Virtualization card ([#35649](https://projects.theforeman.org/issues/35649))
+* New UI shows creator of host as the 'Host owner' not who actually created ([#35642](https://projects.theforeman.org/issues/35642))
+* New hosts detail page doesn't show global and host parameters ([#35255](https://projects.theforeman.org/issues/35255))
+
+#### Foreman - JavaScript stack
+* Search focuses when writing / in text area ([#36111](https://projects.theforeman.org/issues/36111))
+* Search should have a name attribute ([#35978](https://projects.theforeman.org/issues/35978))
+* Allow passing parameters to getControllerSearchProps ([#35896](https://projects.theforeman.org/issues/35896))
+* Add tag_type parameter to replace_value_control ([#35876](https://projects.theforeman.org/issues/35876))
+* New host details - Move Details tab out of experimental labs ([#35839](https://projects.theforeman.org/issues/35839))
+* Host status and personal access token views use magic numbers for per_page ([#35802](https://projects.theforeman.org/issues/35802))
+* Change autocomplete to be in Patternfly 4 ([#35550](https://projects.theforeman.org/issues/35550))
+
+#### Foreman - Notifications
+* Make RSS notification stick around for 1 month instead of going away after a day ([#35866](https://projects.theforeman.org/issues/35866))
+
+#### Foreman - Packaging
+* Drop old Ruby &lt; 2.5 compatibility with SecureRandom ([#35781](https://projects.theforeman.org/issues/35781))
+* Depend on RSS gem for Ruby 3 ([#35462](https://projects.theforeman.org/issues/35462))
+
+#### Foreman - Performance
+* Expose puma worker_timeout configuration option ([#35641](https://projects.theforeman.org/issues/35641))
+
+#### Foreman - Rake tasks
+* Add support for journald into errors:fetch_log rake task ([#35903](https://projects.theforeman.org/issues/35903))
+
+#### Foreman - Reporting
+* Update report templates for multi-CV ([#35660](https://projects.theforeman.org/issues/35660))
+
+#### Foreman - Search
+* template autocomplete has incorrect props  ([#35912](https://projects.theforeman.org/issues/35912))
+* Configuration status is named as "status" in the search syntax, which is confusing and inconsistent with other stats ([#35843](https://projects.theforeman.org/issues/35843))
+
+#### Foreman - Settings
+* Foreman.settings.load_values is not able to pick settings which transitioned from a non-default to default value ([#35894](https://projects.theforeman.org/issues/35894))
+* Improve setting definition DSL and move setting registry to memory ([#29939](https://projects.theforeman.org/issues/29939))
+
+#### Foreman - Templates
+* Add pagelet mountpoints to form template to make it extensible in plugins ([#35726](https://projects.theforeman.org/issues/35726))
+* New PXEGrub2 template required in order to deploy Ubuntu 22 on EFI systems ([#35286](https://projects.theforeman.org/issues/35286))
+
+#### Foreman - Unattended installations
+* Remove Puppet host_param options from template ([#36131](https://projects.theforeman.org/issues/36131))
+* Pass URL parameters to foreman_url as hash ([#36019](https://projects.theforeman.org/issues/36019))
+* Kickstart default - remove @core group ([#36014](https://projects.theforeman.org/issues/36014))
+* Add custom boot arguments for kickstart hosts ([#35969](https://projects.theforeman.org/issues/35969))
+* Windows default iPXE httpboot template ([#35909](https://projects.theforeman.org/issues/35909))
+* Kickstart default fails with Katello ([#35900](https://projects.theforeman.org/issues/35900))
+* Provisioning registered RHEL hosts is impossible without Katello installed ([#35868](https://projects.theforeman.org/issues/35868))
+* Install chrony on RHEL 7 machines ([#35840](https://projects.theforeman.org/issues/35840))
+* Ubuntu Autoinstall enable offline and online installation ([#35719](https://projects.theforeman.org/issues/35719))
+* pkg_manager.erb - support AmazonLinux 2 & 2022 ([#35670](https://projects.theforeman.org/issues/35670))
+* Use Host registration with subscription-manager on SUSE ([#35645](https://projects.theforeman.org/issues/35645))
+
+#### Foreman - Web Interface
+* Template form popovers stick around even after changing tabs ([#35957](https://projects.theforeman.org/issues/35957))
+* Host form popovers stick around even after changing tabs ([#35956](https://projects.theforeman.org/issues/35956))
+
+#### Installer
+* Move katello certificate integration into puppet-puppet ([#35985](https://projects.theforeman.org/issues/35985))
+
+#### Installer - Foreman modules
+* Manage Redis service when the cache store is set to Redis ([#36037](https://projects.theforeman.org/issues/36037))
+* Enable the HStore module in postgres for pulpcore 3.22 upgrade ([#36030](https://projects.theforeman.org/issues/36030))
+* assets are not compressed during delivery anymore ([#36028](https://projects.theforeman.org/issues/36028))
+* Permit recursive ownership/permissions for environments dir ([#35983](https://projects.theforeman.org/issues/35983))
+* Permit setting default_schedules to true ([#35932](https://projects.theforeman.org/issues/35932))
+* ansible is not able to detect if the remote host just stops responding ([#35925](https://projects.theforeman.org/issues/35925))
+* Expose new sp-rex-ssh tunables ([#35899](https://projects.theforeman.org/issues/35899))
+* mod_expires is not loaded ([#35870](https://projects.theforeman.org/issues/35870))
+* Disable Puppetserver telemetry by default ([#35728](https://projects.theforeman.org/issues/35728))
+
+#### Packaging - RPMs
+* rubygem-openscap (and thus foreman_openscap) can't be installed on CentOS Stream 8 ([#36086](https://projects.theforeman.org/issues/36086))
+* Legacy rex form is missing options for future or recurring execution ([#35997](https://projects.theforeman.org/issues/35997))
+* Drop foreman_spacewalk plugin ([#35767](https://projects.theforeman.org/issues/35767))
+* Introduce foreman-obsolete-packages to remove old packages ([#35743](https://projects.theforeman.org/issues/35743))
+
+#### SELinux - Packaging
+* Drop DISTRO variable in Makefile ([#35971](https://projects.theforeman.org/issues/35971))
+
+#### Smart Proxy
+* Smart proxy settings.yml.example does not mention JOURNAL as available log_file value ([#35920](https://projects.theforeman.org/issues/35920))
+
+#### Smart Proxy - DNS
+* Windows DNSCMD no implicit conversion of nil into String again ([#35979](https://projects.theforeman.org/issues/35979))
+
+*A full list of changes in 3.6.0 is available via [Redmine](https://projects.theforeman.org/issues?set_filter=1&sort=id%3Adesc&status_id=closed&f[]=cf_12&op[cf_12]=%3D&v[cf_12]=1644)*
 
 ### Contributors
 
